# platform.core.location.geofence-server

./: AUTHORS  CMakeLists.txt  Makefile.am  configure.ac  geofence-server.changes  geofence-server.manifest
geofence-server/: CMakeLists.txt  Makefile.am  geofence-server.provider  geofence_server.c  geofence_server_appman.c  geofence_server_bluetooth.c  geofence_server_internal.c  geofence_server_internal.h  geofence_server_private.h  geofence_server_wifi.c  org.tizen.lbs.Providers.GeofenceServer.service.in  server.c  server.h
geofence-server/config/: geofence-server.conf
geofence-server/include/: geofence-module.h  geofence_server_data_types.h  geofence_server_extra_data_types.h
geofence-server/script/: geofence-server
geofence-server/src/: debug_util.h  geofence_server.c  geofence_server.h  geofence_server_alarm.c  geofence_server_alarm.h  geofence_server_bluetooth.c  geofence_server_bluetooth.h  geofence_server_db.c  geofence_server_db.h  geofence_server_internal.c  geofence_server_internal.h  geofence_server_log.c  geofence_server_log.h  geofence_server_private.h  geofence_server_wifi.c  geofence_server_wifi.h  server.c  server.h
module/: CMakeLists.txt  Makefile.am  log.h  module_geofence_server.c  module_internal.c  module_internal.h
packaging/: geofence-server.service  geofence-server.spec
