CMAKE_MINIMUM_REQUIRED(VERSION 2.0)
PROJECT(geofence) 

SET(geofence_module ${PROJECT_NAME})

SET(CLIENT_SRCS_DIR "${CMAKE_CURRENT_SOURCE_DIR}")
SET(module_pkgs_LDFLAGS "${module_pkgs_LDFLAGS} -ldl")
SET(MODULE_EXTRA_CFLAGS "${MODULE_EXTRA_CFLAGS} -D_GNU_SOURCE")

INCLUDE_DIRECTORIES(${SERVER_SRCS_DIR}/include)

SET (CLIENT_SRCS
	module_geofence_server.c 
)

ADD_LIBRARY(${geofence_module} SHARED ${CLIENT_SRCS})
TARGET_LINK_LIBRARIES(${geofence_module} ${module_pkgs_LDFLAGS})
SET_TARGET_PROPERTIES(${geofence_module} PROPERTIES VERSION ${FULLVER} SOVERSION ${MAJORVER} CLEAN_DIRECT_OUTPUT 1)
SET_TARGET_PROPERTIES(${geofence_module} PROPERTIES COMPILE_FLAGS ${MODULE_EXTRA_CFLAGS})

INSTALL(TARGETS ${geofence_module} DESTINATION ${LIB_DIR}/geofence/module)
